<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.activities.AddUserActivity">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/edit_user"
        android:textColor="@color/purple_500"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="105dp"
        android:layout_height="2dp"
        android:layout_marginVertical="4dp"
        android:background="@color/dark_grey"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_user_image"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/circular_placeholder"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="68dp"
            android:clickable="true"
            app:backgroundTint="@color/purple_500"
            app:elevation="0dp"
            app:fabSize="mini"
            app:layout_constraintStart_toStartOf="@+id/civ_user_image"
            app:layout_constraintTop_toTopOf="@+id/civ_user_image"
            app:srcCompat="@drawable/ic_baseline_edit_24"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_username"
        android:textColor="@color/black"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="4dp"
        android:background="@drawable/et_bg"
        android:drawableEnd="@drawable/ic_baseline_person"
        android:drawableTint="@color/purple_500"
        android:elevation="4dp"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:paddingHorizontal="16dp"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/enter_designation"
        android:textColor="@color/black"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/et_designation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="4dp"
        android:background="@drawable/et_bg"
        android:drawableEnd="@drawable/ic_baseline_designation"
        android:drawableTint="@color/purple_500"
        android:elevation="4dp"
        android:hint="Enter Designation : "
        android:inputType="textPersonName"
        android:paddingHorizontal="16dp"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/enter_doj"
        android:textColor="@color/black"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/tv_doj"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="4dp"
        android:background="@drawable/et_bg"
        android:elevation="4dp"
        android:gravity="center"
        android:hint="Enter DOJ : "
        android:inputType="date"
        android:paddingHorizontal="16dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:drawableRightCompat="@drawable/ic_baseline_calender"
        app:drawableTint="@color/purple_500"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/btn_create_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="12dp"
        android:background="@drawable/bg_btn"
        android:drawableRight="@drawable/ic_baseline_edit_24"
        android:drawableTint="@color/white"
        android:paddingHorizontal="36dp"
        android:text="Create"
        android:textAllCaps="false" />
</LinearLayout>